# snoRupdate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh  config.ini  run.sh
include/: bed_creator.h  file_reader.h  gtf_builder.h
src/: bed_creator.cpp  file_reader.cpp  gtf_builder.cpp  main.cpp
